2007-07-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Added a "parseOnly" flag argument to
	ParseExpr() to indicate whether the caller is Tcl_ParseExpr(), with an
	end goal of filling a Tcl_Parse with Tcl_Tokens representing the
	parsed expression, or TclCompileExpr() with the goal of compiling and
	executing the expression.  In the latter case, more aggressive
	conversion of QUOTED and BRACED lexeme to literals is done.  In the
	former case, all such conversion is avoided, since Tcl_Token production
	would revert it anyway.  This enables simplifications to the
	GenerateTokensForLiteral() routine as well.

2007-07-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Added a field for operator precedence
	to be stored directly in the parse tree.  There's no memory cost to
	this addition, since that memory would have been lost to alignment
	issues anyway.  Also, converted precedence definitions and lookup
	tables to use symbolic constants instead of raw number for improved
	readability, and continued extending/improving/correcting comments.
	Removed some unused counter variables.  Renamed some variables for
	clarity and replaced some cryptic logic with more readable macros.

2007-07-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Revision so that the END lexeme never
	gets inserted into the parse tree.  Later tree traversal never reaches
	it since its location in the tree is not variable.  Starting and
	stopping with the START lexeme (node 0) is sufficient.  Also finished
	lexeme code commentary.

	* generic/tclCompExpr.c:	Added missing creation and return
	of the Tcl_Parse fields that indicate error conditions.  [Bug 1749987]

2007-07-05  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl (unknown):   Corrected inconsistent error message
	in interactive [unknown] when empty command is invoked. [Bug 1743676]

2007-07-05  Miguel Sofer  <msofer@users.sf.net>
